practices/ckad/f.services/services_and_networking-3.yaml
# https://github.com/dgkanatsios/CKAD-exercises/blob/main/f.services.md
# Create an nginx deployment of 2 replicas, expose it via a ClusterIP service on port 80.
# Create a NetworkPolicy so that only pods with labels 'access: granted' can access the pods in this deployment and apply it
# k create deploy nginx -c=nginx --replicas=2 -o yaml # 不用 --port=80
# k expose deploy nginx --port=80
# policy 只能上網查格式，不能用指令代產

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted
    ports:
    - protocol: TCP
      port: 80

# k get svc
# k run client --image=busybox --restart=Never -l access=granted --rm -it -- /bin/sh
# wget 10.104.152.159:80
